# leda-contrib-self-update-agent-fork

./: CMakeLists.txt  Dockerfile.amd64  Dockerfile.arm64  README.md
.github/actions/build-container-image/: action.yaml
.github/actions/build-native-binary/: action.yaml
.github/workflows/: main.yaml  main_developer.yaml  ocaas.yaml
cmake/: dependencies.cmake
cmake/linux/amd64/: toolchain.cmake
docs/: bfb.md
scripts/: build_glib_amd64.sh  build_openssl_amd64.sh
src/: CMakeLists.txt  Context.h  Defaults.cpp  TechCodes.h  main.cpp  run.sh
src/Download/: Downloader.cpp
src/FSM/States/: Connected.cpp
